# lunchtimer-hk

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile-musl  LICENSE  Makefile  README.md  docker-compose.yml  rustfmt.toml
assets/: lunches.tpl  lunches2.tpl  lunches3.tpl
lunchtimer_ui/: .gitignore  README.md  pubspec.yaml
lunchtimer_ui/android/app/: build.gradle
lunchtimer_ui/android/app/src/main/: AndroidManifest.xml
lunchtimer_ui/android/app/src/main/kotlin/com/example/lunchtimer_ui/: MainActivity.kt
lunchtimer_ui/android/app/src/profile/: AndroidManifest.xml
lunchtimer_ui/ios/Runner/: Info.plist
lunchtimer_ui/ios/Runner.xcodeproj/: project.pbxproj
lunchtimer_ui/lib/: fetcher.dart  food_list.dart  food_table.dart  main.dart  menu.dart  restaurant.dart  styles.dart  tab_view.dart  table.dart
lunchtimer_ui/lib/store/: action.dart  reducer.dart  state.dart
lunchtimer_ui/lib/views/: baseNavigator.dart  restaurantsList.dart
lunchtimer_ui/web/: index.html  manifest.json
src/: lib.rs  main.rs
src/assets/: lunches.tpl
src/lunches/: _parsers.rs  fetcher.rs  helpers.rs  macros.rs  menu.rs  mod.rs  storage.rs  store.rs  types.rs
src/lunches/impl/: _fascila.rs  beranek.rs  cerny_kun.rs  fascila.rs  menicka.rs  mod.rs  naplavka.rs  petr.rs  sova.rs  u_kocoura.rs
